--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio de Sesión - Colombian Fast Food</title>
-  <link rel="stylesheet" href="styles/login.css">
+  <link rel="stylesheet" href="styles.css">
   <script defer src="scripts/login.js"></script>
 </head>
 <body>
